# warpgate-web/src/admin/lib/openapi-schema.json
@@ -930,6 +930,17 @@
             "required": false,
             "deprecated": false,
             "explode": true
+          },
+          {
+            "name": "request_id",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "in": "query",
+            "required": false,
+            "deprecated": false,
+            "explode": true
           }
         ],
         "responses": {
